[xtext][findbugs] Fixed some issues that were revealed by findbugs in the code base